[package]
name = "VimBrowse"
version = "0.1.0"
edition = "2024"

[dependencies]
win-hotkeys = "0.5.0"
winit = "0.30.9"
softbuffer = "0.4.6"
# tray-icon = "0.20.0"
anyhow = "1"
rgb = "0.8.50"

[dependencies.windows]
version = "0.61.1"
features = [
    # uiaccess
    "Win32_Security",
    "Win32_System_Diagnostics",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
    "Win32_System_Environment",
    "Win32_System_Threading"
]

[build-dependencies]
embed-resource = "3.0.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "debuginfo"